...
  const getTabIcon = useCallback(
    (
      routeName: string,
      focused: boolean,
    ): { name: string; type: 'ionicon' | 'material' } => {
      switch (routeName) {
        case 'Home':
          return {
            name: focused ? 'compass' : 'compass-outline',
            type: 'material',
          };
        case 'Map':
          return {
...
          };
        case 'Inbox':
          return {
            name: focused ? 'chatbubble' : 'chatbubble-outline',
            type: 'ionicon',
          };
        case 'Profile':
          return {
            name: focused ? 'account-circle' : 'account-circle-outline',
            type: 'material',
          };
        default:
          return {
...
