...
            <Text
              style={[
                styles.tabText,
                selectedTab === 'notifications' && styles.tabTextActive,
              ]}
            >
              Activity
            </Text>
            {unreadNotificationsCount > 0 && (
              <View style={styles.tabBadge} accessibilityElementsHidden>
                <Text style={styles.tabBadgeText}>
                  {unreadNotificationsCount}
                </Text>
...
